# stream_of_worship

./: .env.local  .gitignore  .graphifyignore  :memory:  :memory:-info  AGENTS.md  CLAUDE.md  DEVELOPER.md  Dockerfile  Dockerfile.allinone  IMPLEMENTATION_SUMMARY.md  MEMORY.md  README.md  SENSEVOICE_TUNING_SUMMARY.md  TODO.md  docker-compose.allinone.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  process_songs.sh  process_songs_native.sh  pyproject.toml  requirements.txt  requirements_allinone.txt  setup_poc.sh
lab/legacy-cli-tui/: pyproject.toml
lab/legacy-cli-tui/scripts/: generate_lrc.py  migrate_song_library.py
lab/legacy-cli-tui/src/sow_legacy_cli_tui/: __init__.py
lab/legacy-cli-tui/tests/integration/: __init__.py  test_lrc_pipeline.py
lab/legacy-cli-tui/tests/unit/: test_catalog.py  test_cli.py  test_config.py  test_lrc_generator.py  test_metadata_generator.py  test_migration.py  test_paths.py  test_tui_models.py  test_tui_services.py  test_tui_state.py
lab/poc-scripts/: POC_SUMMARY.md  README.md  README_qwen3_asr_phase0.md  analyze_sections.py  bpm_agreement_report.py  bpm_diff.py  compare_asr_backends.py  compare_bpm_libraries.py  construct_songset_agent.py  diagnose_closers.py  eval_lrc.py  experiment_lrc_signals.py  gen_clean_vocal_stem.py  gen_clean_vocal_stem_mvsep.py  gen_lrc_omnisensevoice.py  gen_lrc_qwen3_asr_mvsep.py  gen_lrc_qwen3_asr_mvsep_force_align_v2.py  gen_lrc_qwen3_asr_pytorch.py  gen_lrc_whisper.py  gen_lrc_youtube.py  generate_section_transitions.py  generate_transitions.py  lyrics_scraper.py  poc_analysis_allinone.py  pyproject.toml  review_transitions.py  run_song_process_pipeline.sh  score_lrc_quality.py  test_miniaudio.py  test_sensevoice.py  test_tempo_hop_length.py  test_tempo_strategies.py  utils.py
lab/poc-scripts/docker/: docker-compose.allinone.yml  docker-compose.yml
lab/poc-scripts/experiment_output/: signals.md
lab/poc-scripts/experiment_output/ai_ke_yi_zai_geng_duo_yi_dian_dian_241/: signals.csv
lab/poc-scripts/experiment_output/chai_qian_wo_566/: signals.csv
lab/poc-scripts/experiment_output/cong_zao_chen_dao_ye_wan_130/: signals.csv
lab/poc-scripts/experiment_output/dan_dan_ai_mi_249/: signals.csv
lab/poc-scripts/experiment_output/dan_qin_ge_chang_zan_mei_mi_407/: signals.csv
lab/poc-scripts/experiment_output/he_deng_en_dian_262/: signals.csv
lab/poc-scripts/experiment_output/huo_zhu_wei_yao_jing_bai_mi_212/: signals.csv
lab/poc-scripts/experiment_output/shen_gao_yang_248/: signals.csv
lab/poc-scripts/experiment_output/wo_yao_quan_xin_zan_mei_244/: signals.csv
lab/poc-scripts/experiment_output/yuan_tian_huan_xi_245/: signals.csv
lab/poc-scripts/experiment_output/zhe_shi_sheng_jie_zhi_di_259/: signals.csv
lab/poc-scripts/experiment_output/zhu_mi_shi_wo_li_liang_321/: signals.csv
lab/poc-scripts/poc/: __init__.py
lab/poc-scripts/poc/songset_constructor/: README.md  __init__.py  artifacts.py  catalog.py  cli.py  config.py  db.py  graph.py  models.py  music_rules.py  regen_theme_anchors.py
lab/poc-scripts/tests/: __init__.py  conftest.py  test_eval_lrc.py  test_songset_constructor_artifacts.py  test_songset_constructor_catalog.py  test_songset_constructor_cli.py  test_songset_constructor_config.py  test_songset_constructor_db.py  test_songset_constructor_graph.py  test_songset_constructor_harmony.py  test_songset_constructor_rules.py
lab/poc-scripts/transition_builder_v2/: IMPLEMENTATION_STATUS.md  REFACTORING_SUMMARY.md  config.json  test_transition_generation.py
lab/poc-scripts/transition_builder_v2/app/: main.py
lab/poc-scripts/transition_builder_v2/tests/: README.md  run_workflow_test.py  test_full_song_output.py
lab/sow-app/: pyproject.toml
lab/sow-app/src/sow_lab_app/: README.md  app.py  config.py  main.py  state.py
lab/sow-app/tests/: README_NAVIGATION_TESTS.md  test_config.py  test_navigation.py
lab/sow-app/tests/db/: test_models.py  test_read_client.py  test_read_client_libsql.py  test_schema.py  test_songset_client.py  test_songset_client_user_isolation.py
lab/sow-app/tests/screens/: test_browse.py  test_login.py
lab/sow-app/tests/services/: __init__.py  test_asset_cache.py  test_audio_engine.py  test_catalog.py  test_catalog_cross_db.py  test_export.py  test_playback.py  test_songset_io.py  test_sync.py  test_video_engine.py
ops/admin-cli/: ANALYZE_JOB.md  pyproject.toml
ops/admin-cli/scripts/: populate_songs_batch.py
ops/admin-cli/tests/: conftest.py
ops/admin-cli/tests/admin/: __init__.py  conftest.py  test_analysis_client.py  test_audio_batch_eager_lrc.py  test_audio_batch_unified.py  (+14 more)
services/analysis/: .env.example  DEPLOYMENT.md  DEVELOPER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-dev.sh
services/analysis/docs/: MVSEP_API.md
services/analysis/scripts/: deploy.sh
services/analysis/tests/: test_cache.py  test_forced_alignment.py  test_job_store.py  test_lrc_benchmark.py  test_lrc_integration_qwen3.py  test_mvsep_client.py  test_mvsep_fallback.py  test_queue_persistence.py  test_qwen3_fallback.py  test_qwen3_regression.py  test_youtube_transcript.py
services/qwen3/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/qwen3/tests/: test_map_segments_to_lines.py
services/render-worker/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
services/render-worker/deploy/: DEPLOY-DEV.md  DEPLOY.md  aws-up.sh  deploy.sh
services/render-worker/fonts/: MANIFEST.md
services/render-worker/scripts/: download-ffmpeg.sh  upload-ffmpeg-to-r2.sh
services/render-worker/specs/: ffmpeg-r2-followups.md  static-ffmpeg-migration.md  vendor-ffmpeg-via-r2-v2.md  vendor-ffmpeg-via-r2.md
services/render-worker/tests/: conftest.py  test_asset_fetcher.py  test_audio_engine.py  test_chapters.py  test_config.py  test_db.py  test_docker.py  test_frame_renderer.py  test_lambda_handler.py  test_lrc_parser.py  test_pipeline.py  test_r2_client.py  test_timeout_handling.py  test_uploader.py  test_video_engine.py
(+1626 files in other folders)
