[project]
name = "stream-of-worship"
version = "0.2.0"
description = "Seamless Chinese worship music transition system with lyrics video generation"
authors = [{name = "Stream of Worship Contributors"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "pathlib>=1.0.0",
    "dataclasses>=0.0",
    "typing>=3.0.0",
]

[project.optional-dependencies]
scraper = [
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "requests>=2.32.0",
    "pypinyin>=0.52.0"
]

# LRC generation dependencies (Whisper + LLM)
lrc_generation = [
    "openai-whisper>=20231117",
    "openai>=1.0.0",
]

# Video generation dependencies
video = [
    "ffmpeg-python>=0.2.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

# TUI dependencies
tui = [
    "textual>=0.44.0",
    "pydub>=0.25.0",
    "pyaudio>=0.2.14",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

# Song analysis dependencies
song_analysis = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
]

# Transcription dependencies
# LRC generation dependencies (Whisper + LLM)
transcription = [
    "funasr>=1.3.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "modelscope>=1.34.0"
]

# Migration dependencies (scripts/migrate_song_library.py)
migration = [
    "pypinyin>=0.52.0",
]

# Admin CLI dependencies
admin = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "pypinyin>=0.55.0",
    "yt-dlp>=2024.1.1",
    "boto3>=1.34.0",
]

# User App (TUI) dependencies
app = [
    "textual>=0.44.0",
    "pydub>=0.25.0",
    "miniaudio>=1.59",
    "ffmpeg-python>=0.2.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

# Test dependencies
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

# All dependencies together
all = [
    "stream-of-worship[scraper,lrc_generation,video,tui,song_analysis,migration,test,transcription,admin,app]",
]

[project.scripts]
stream-of-worship = "stream_of_worship.cli.main:main"
sow-admin = "stream_of_worship.admin.main:cli_entry"
sow-app = "stream_of_worship.app.main:cli_entry"

# Package discovery - use src layout
[tool.setuptools.packages.find]
where = ["src"]
include = ["stream_of_worship*"]
exclude = ["tests*", "test*"]

[tool.setuptools.package-data]
stream_of_worship = ["assets/fonts/*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = false
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.extra-build-dependencies]
natten = ["torch"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Exclude scripts directory from test collection
# scripts/test_allinone_analyze.py is a standalone script for Docker use
norecursedirs = ["scripts", "poc", ".*", "build", "dist", "*.egg-info"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
