[project]
name = "sow-lab-poc-scripts"
version = "0.1.0"
description = "Experimental POC scripts for Stream of Worship"
requires-python = ">=3.11"
dependencies = [
    "stream-of-worship[postgres]",
    "sow-lab-app",
    "sow-legacy-cli-tui",
]

[project.optional-dependencies]
transcription = [
    "faster-whisper>=1.0.0",
    "typer>=0.12.0",
    "funasr>=1.3.0",
    "OmniSenseVoice>=0.4.2",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "numpy>=2.0.2,<2.1.0",
    "modelscope>=1.34.0",
    "dashscope>=1.14.0",
    "rapidfuzz>=3.0.0",
    "pydub>=0.25.0",
    "boto3>=1.34.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "zhconv>=1.4.0",
]
lrc_eval = [
    "faster-whisper>=1.0.0",
    "funasr>=1.3.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "modelscope>=1.34.0",
    "pypinyin>=0.52.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydub>=0.25.0",
]
poc_qwen3_asr = [
    "qwen-asr>=0.0.6",
    "huggingface-hub>=0.20.0",
    "onnxruntime>=1.17.0",
    "transformers>=4.40.0",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "numpy>=2.0.2,<2.1.0",
    "librosa>=0.10.0",
    "typer>=0.12.0",
    "rapidfuzz>=3.0.0",
    "zhconv>=1.4.0",
    "pypinyin>=0.52.0",
    "dashscope>=1.14.0",
]
poc_qwen3_mlx = [
    "mlx",
    "mlx-qwen3-asr>=0.1.0",
    "rapidfuzz>=3.0.0",
    "huggingface-hub>=0.20.0",
    "zhconv>=1.4.0",
]
poc_qwen3_align = [
    "qwen-asr",
    "torch>=2.8.0,<2.9.0",
    "numpy>=2.0.2,<2.1.0",
    "pydub>=0.25.0",
    "typer>=0.12.0",
]
score_lrc_base = [
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "transformers>=4.40.0",
    "zhconv>=1.4.0",
    "typer>=0.12.0",
    "scipy>=1.10.0",
    "tomli_w>=1.0.0",
    "boto3>=1.34.0",
    "pypinyin>=0.52.0",
]
fix_lrc = ["sow-lab-poc-scripts[poc_qwen3_mlx,poc_qwen3_align,score_lrc_base]"]
test = ["pytest>=7.4.0", "pytest-mock>=3.12.0"]

[tool.uv.sources]
stream-of-worship = { path = "../../ops/admin-cli" }
sow-lab-app = { path = "../sow-app" }
sow-legacy-cli-tui = { path = "../legacy-cli-tui" }

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "../sow-app/src", "../legacy-cli-tui/src", "../../ops/admin-cli/src"]
