[project]
name = "sow-lab-app"
version = "0.1.0"
description = "Deprecated lab TUI app for Stream of Worship"
requires-python = ">=3.11"
dependencies = [
    "stream-of-worship[postgres]",
    "textual>=0.44.0",
    "pydub>=0.25.0",
    "miniaudio>=1.59",
    "ffmpeg-python>=0.2.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "tomli-w>=1.0.0",
    "typer>=0.12.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
app = []
tui = ["textual>=0.44.0", "pydub>=0.25.0", "miniaudio>=1.59", "numpy>=1.24.0"]
video = ["ffmpeg-python>=0.2.0", "Pillow>=10.0.0", "numpy>=1.24.0"]
song_analysis = ["librosa>=0.10.0", "numpy>=1.24.0"]
stem_separation = ["audio-separator>=0.30.0", "onnxruntime>=1.17.0"]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.19.0",
    "testcontainers[postgres]>=4.0.0",
]

[project.scripts]
sow-app = "sow_lab_app.main:cli_entry"

[tool.uv.sources]
stream-of-worship = { path = "../../ops/admin-cli" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sow_lab_app = ["assets/fonts/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "../../ops/admin-cli/src"]
