[project]
name = "stream-of-worship"
version = "0.2.0"
description = "Admin CLI and shared database helpers for Stream of Worship"
authors = [{name = "Stream of Worship Contributors"}]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pathlib>=1.0.0",
    "dataclasses>=0.0",
    "typing>=3.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0",
]
scraper = [
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "requests>=2.32.0",
    "pypinyin>=0.52.0",
]
admin = [
    "psycopg[binary]>=3.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "pypinyin>=0.55.0",
    "yt-dlp>=2024.1.1",
    "youtube-transcript-api>=0.6.0",
    "boto3>=1.34.0",
    "audio-separator>=0.30.0",
    "onnxruntime>=1.17.0",
    "miniaudio>=1.59",
    "textual>=0.44.0",
    "numpy>=1.24.0",
]
transcription = [
    "faster-whisper>=1.0.0",
    "typer>=0.12.0",
    "funasr>=1.3.0",
    "OmniSenseVoice>=0.4.2",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "numpy>=2.0.2,<2.1.0",
    "modelscope>=1.34.0",
    "dashscope>=1.14.0",
    "rapidfuzz>=3.0.0",
    "pydub>=0.25.0",
    "boto3>=1.34.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "zhconv>=1.4.0",
]
lrc_eval = [
    "faster-whisper>=1.0.0",
    "funasr>=1.3.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "modelscope>=1.34.0",
    "pypinyin>=0.52.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydub>=0.25.0",
]
poc_qwen3_asr = [
    "qwen-asr>=0.0.6",
    "huggingface-hub>=0.20.0",
    "onnxruntime>=1.17.0",
    "transformers>=4.40.0",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "numpy>=2.0.2,<2.1.0",
    "librosa>=0.10.0",
    "typer>=0.12.0",
    "rapidfuzz>=3.0.0",
    "zhconv>=1.4.0",
    "pypinyin>=0.52.0",
    "dashscope>=1.14.0",
]
poc_qwen3_align = [
    "qwen-asr",
    "torch>=2.8.0,<2.9.0",
    "numpy>=2.0.2,<2.1.0",
    "pydub>=0.25.0",
    "typer>=0.12.0",
]
score_lrc_base = [
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "transformers>=4.40.0",
    "zhconv>=1.4.0",
    "typer>=0.12.0",
    "scipy>=1.10.0",
    "tomli_w>=1.0.0",
    "boto3>=1.34.0",
    "pypinyin>=0.52.0",
]
fix_lrc = [
    "stream-of-worship[poc_qwen3_align,score_lrc_base]",
]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "testcontainers[postgres]>=4.0.0",
]

[project.scripts]
sow-admin = "stream_of_worship.admin.main:cli_entry"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stream_of_worship*"]
exclude = ["tests*", "test*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = true
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = ["integration: requires Docker (testcontainers Postgres container)"]
