[project]
name = "stream-of-worship"
version = "0.2.0"
description = "Admin CLI and shared database helpers for Stream of Worship"
authors = [{name = "Stream of Worship Contributors"}]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pathlib>=1.0.0",
    "dataclasses>=0.0",
    "typing>=3.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0",
]
scraper = [
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "requests>=2.32.0",
    "pypinyin>=0.52.0",
]
admin = [
    "psycopg[binary]>=3.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "pypinyin>=0.55.0",
    "yt-dlp>=2024.1.1",
    "youtube-transcript-api>=0.6.0",
    "boto3>=1.34.0",
    "miniaudio>=1.59",
    "textual>=0.44.0",
    "numpy>=1.24.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "testcontainers[postgres]>=4.0.0",
]

[project.scripts]
sow-admin = "stream_of_worship.admin.main:cli_entry"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stream_of_worship*"]
exclude = ["tests*", "test*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = true
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = ["integration: requires Docker (testcontainers Postgres container)"]
