[project]
name = "sow-analysis"
version = "0.1.0"
description = "Audio analysis service for Stream of Worship"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "madmom @ git+https://github.com/CPJKU/madmom.git",
    "allin1>=1.1.0",
    "demucs>=4.0.0",
    "librosa>=0.10.0",
    "boto3>=1.34.0",
    "numpy>=1.24.0",
    "httpx>=0.26.0",
    "openai-whisper>=20231117",
    "openai>=1.10.0",
]

[project.optional-dependencies]
service = ["python-multipart>=0.0.6"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0"]

[project.scripts]
sow-analysis = "sow_analysis.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
