[project]
name = "sow-render-worker"
version = "0.1.0"
description = "AWS Lambda render worker for Stream of Worship video/audio pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-mock>=3.12.0", "pytest-asyncio>=0.21.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
